--- a/scripts/Cleanse_GDP.ipynb
+++ b/scripts/Cleanse_GDP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPtJ7dc97drGDgIWRT39WfV",
+      "authorship_tag": "ABX9TyO7vFLoYZjWwsffVpUtnTxK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1352,12 +1352,12 @@
         "raw_df"
       ],
       "metadata": {
-        "id": "OykINCLFm9ZX",
-        "outputId": "664e472e-2472-43ef-83c5-a36b3257a850",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 199
-        }
+        },
+        "id": "OykINCLFm9ZX",
+        "outputId": "664e472e-2472-43ef-83c5-a36b3257a850"
       },
       "execution_count": 25,
       "outputs": [
@@ -1623,12 +1623,12 @@
         "usa_inflation.head()"
       ],
       "metadata": {
-        "id": "kXX2qrqhnOzn",
-        "outputId": "6e7028d4-2ffb-46af-9b51-facade11fae9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "kXX2qrqhnOzn",
+        "outputId": "6e7028d4-2ffb-46af-9b51-facade11fae9"
       },
       "execution_count": 26,
       "outputs": [
@@ -1976,12 +1976,12 @@
         "raw_df.head()"
       ],
       "metadata": {
-        "id": "0VLJBTOdndax",
-        "outputId": "9199349e-5e4b-4589-b10c-b661aa8b5a9e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "0VLJBTOdndax",
+        "outputId": "9199349e-5e4b-4589-b10c-b661aa8b5a9e"
       },
       "execution_count": 28,
       "outputs": [
@@ -2286,12 +2286,12 @@
         "usa_recession.head()\n"
       ],
       "metadata": {
-        "id": "FOQBu7BwoRVw",
-        "outputId": "66cbcaac-1902-4437-c336-067a01963c98",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "FOQBu7BwoRVw",
+        "outputId": "66cbcaac-1902-4437-c336-067a01963c98"
       },
       "execution_count": 29,
       "outputs": [
@@ -2626,11 +2626,11 @@
         "print(\"USA Recession end year: \",usa_recession_endYear)\n"
       ],
       "metadata": {
-        "id": "KwRY7E2ppXvr",
-        "outputId": "7ca097b6-d223-47ff-d82f-482f3909021b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KwRY7E2ppXvr",
+        "outputId": "7ca097b6-d223-47ff-d82f-482f3909021b"
       },
       "execution_count": 31,
       "outputs": [
@@ -2655,22 +2655,27 @@
       "source": [
         "# instead of hardcoding year alighnments, we will do it dynamically as data refresh\n",
         "\n",
-        "min_year = max(usa_GDP_startYear,\n",
+        "common_start = max(usa_GDP_startYear,\n",
         "               usa_unemployment_startYear,\n",
         "               usa_inflation_startYear,\n",
         "               usa_recession_startYear)\n",
         "\n",
-        "max_year = min(usa_GDP_endYear,\n",
+        "common_end = min(usa_GDP_endYear,\n",
         "               usa_unemployment_endYear,\n",
         "               usa_inflation_endYear,\n",
         "               usa_recession_endYear)\n",
         "\n",
-        "\n"
+        "\n",
+        "\n",
+        "usa_gdp = usa_gdp[(usa_gdp[\"Year\"] >= common_start) & (usa_gdp[\"Year\"] <= common_end)]\n",
+        "usa_unemployment = usa_unemployment[(usa_unemployment[\"Year\"] >= common_start) & (usa_unemployment[\"Year\"] <= common_end)]\n",
+        "usa_inflation = usa_inflation[(usa_inflation[\"Year\"] >= common_start) & (usa_inflation[\"Year\"] <= common_end)]\n",
+        "usa_recession = usa_recession[(usa_recession[\"Year\"] >= common_start) & (usa_recession[\"Year\"] <= common_end)]\n"
       ],
       "metadata": {
         "id": "CG2ydQ97rk0C"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -2694,6 +2699,72 @@
       ],
       "metadata": {
         "id": "GQ0xYKYLqsFw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# recheck alighnment\n",
+        "usa_GDP_startYear=usa_gdp[\"Year\"].min()\n",
+        "usa_GDP_endYear=usa_gdp[\"Year\"].max()\n",
+        "\n",
+        "usa_unemployment_startYear=usa_unemployment[\"Year\"].min()\n",
+        "usa_unemployment_endYear=usa_unemployment[\"Year\"].max()\n",
+        "\n",
+        "usa_inflation_startYear=usa_inflation[\"Year\"].min()\n",
+        "usa_inflation_endYear=usa_inflation[\"Year\"].max()\n",
+        "\n",
+        "usa_recession_startYear=usa_recession[\"Year\"].min()\n",
+        "usa_recession_endYear=usa_recession[\"Year\"].max()\n",
+        "\n",
+        "print(\"USA GDP start year: \",usa_GDP_startYear)\n",
+        "print(\"USA GDP end year: \",usa_GDP_endYear)\n",
+        "print(\"USA Unemployment start year: \",usa_unemployment_startYear)\n",
+        "print(\"USA Unemployment end year: \",usa_unemployment_endYear)\n",
+        "print(\"USA Inflation start year: \",usa_inflation_startYear)\n",
+        "print(\"USA Inflation end year: \",usa_inflation_endYear)\n",
+        "print(\"USA Recession start year: \",usa_recession_startYear)\n",
+        "print(\"USA Recession end year: \",usa_recession_endYear)\n"
+      ],
+      "metadata": {
+        "id": "kNi0g37TvSA0",
+        "outputId": "5c13cc6e-0f84-4bd1-8b55-3e751b70e7e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "USA GDP start year:  1967\n",
+            "USA GDP end year:  2024\n",
+            "USA Unemployment start year:  1967\n",
+            "USA Unemployment end year:  2024\n",
+            "USA Inflation start year:  1967\n",
+            "USA Inflation end year:  2024\n",
+            "USA Recession start year:  1967\n",
+            "USA Recession end year:  2024\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Brief EDA\n",
+        "\n",
+        "usa_gdp_df.reset_index(drop=True, inplace=True)\n",
+        "usa_unemployment_df.reset_index(drop=True, inplace=True)\n",
+        "usa_inflation_df.reset_index(drop=True, inplace=True)\n",
+        "usa_recession_df.reset_index(drop=True, inplace=True)\n"
+      ],
+      "metadata": {
+        "id": "OuItejDMvUSC"
       },
       "execution_count": null,
       "outputs": []
