updating the keys

--- a/scripts/Analysis.ipynb
+++ b/scripts/Analysis.ipynb
@@ -31,11 +31,11 @@
         "!pip install boto3 pandas requests\n"
       ],
       "metadata": {
-        "id": "v5Aoy5fqb6lX",
-        "outputId": "d965bfcb-c20f-402f-f18a-5f490e8ce490",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "v5Aoy5fqb6lX",
+        "outputId": "d965bfcb-c20f-402f-f18a-5f490e8ce490"
       },
       "execution_count": 7,
       "outputs": [
@@ -89,8 +89,8 @@
         "import io\n",
         "\n",
         "# === EDIT THESE ===\n",
-        "AWS_ACCESS_KEY_ID = \"AKIAYCVHUWZU56AGBL5D\"\n",
-        "AWS_SECRET_ACCESS_KEY = \"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\"\n",
+        "AWS_ACCESS_KEY_ID = \"xxxxxxxxxxxxxxxxxxxxxxxx\"\n",
+        "AWS_SECRET_ACCESS_KEY = \"xxxxxxxxxxxxxxxxxxxxxxxxx\"\n",
         "AWS_REGION = \"us-east-1\"   # or whatever region you use\n",
         "S3_BUCKET_NAME = \"group24-recessionanalysis\"\n",
         "S3_PREFIX = \"cleansed_data/\"\n",
@@ -171,11 +171,11 @@
         "    print(f\"- {name}: {df.shape}\")\n"
       ],
       "metadata": {
-        "id": "HolqPBW5dxO3",
-        "outputId": "239e403b-3389-46e3-b457-321c80b52923",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HolqPBW5dxO3",
+        "outputId": "239e403b-3389-46e3-b457-321c80b52923"
       },
       "execution_count": 30,
       "outputs": [
@@ -1916,12 +1916,12 @@
       ],
       "metadata": {
         "id": "Hc-s9zCsj_1m",
-        "outputId": "ed02927e-db52-451f-d774-7180f1b47792",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "aca6d1e9-62c5-411b-f834-26f992032e95"
       },
-      "execution_count": 36,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -1935,7 +1935,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Uploaded result to s3://group24-recessionanalysis/result/two_year_corr_20251123_162057.csv\n"
+            "Uploaded result to s3://group24-recessionanalysis/result/two_year_corr_20251123_175755.csv\n"
           ]
         }
       ]
