--- a/scripts/Cleanse_GDP.ipynb
+++ b/scripts/Cleanse_GDP.ipynb
@@ -91,8 +91,8 @@
         "import io\n",
         "\n",
         "# === EDIT THESE ===\n",
-        "AWS_ACCESS_KEY_ID = \"AKIAYCVHUWZU56AGBL5D\"\n",
-        "AWS_SECRET_ACCESS_KEY = \"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\"\n",
+        "AWS_ACCESS_KEY_ID = \"xxxxxxxxxx\"\n",
+        "AWS_SECRET_ACCESS_KEY = \"xxxxxxxxxxx\"\n",
         "AWS_REGION = \"us-east-1\"   # or whatever region you use\n",
         "S3_BUCKET_NAME = \"group24-recessionanalysis\"\n",
         "S3_PREFIX = \"raw_data/\"\n",
@@ -489,7 +489,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 110
+          "height": 182
         },
         "id": "NHofJhZgon6y",
         "outputId": "cc361bc8-0c49-4844-df1c-c9f37ab94ae0"
@@ -1057,7 +1057,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 110
+          "height": 144
         },
         "id": "o7sSJdFvpJIA",
         "outputId": "75f089fe-1524-4cf9-c694-ade6b69ce004"
@@ -1631,7 +1631,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 110
+          "height": 199
         },
         "id": "TktS3Fykpfn9",
         "outputId": "f892c10f-cc2d-413a-8a69-3e57fa76018f"
